# SpecprParser.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
SpecprParser/kaitai/: specpr.py
